# moxxy

./: .dependency-cruiser.cjs  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  TECH_DEBT.md  build.rs  install.sh  mobile_app_prd.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.base.json  turbo.json
.changeset/: README.md  actions-surface.md  add-builtin-providers.md  add-claude-code-provider.md  agentic-collaborative.md  agentic-sidebar-surfaces.md  ai-canonical-catalog.md  anonymizer-ort-and-doc-types.md  anonymizer-pii-dictionary.md  apps-send-to-session.md  attachments-to-model.md  audit-a7-a8-web-surface-hardening.md  auto-elision-unlisted-model.md  bash-tool-lifecycle.md  browser-sharp-region-capture.md  browser-ssrf-guard.md  browser-zoom-element-pick-collab-ux.md  bulletproof-release-pipeline.md  calm-debug-bundles.md  channel-connect-step.md  channel-dispatch-typed-seam.md  channels-declarative-dedicated-runner.md  chat-autoscroll.md  chat-history-backfill-on-connect.md  chilled-moons-tap.md  claude-code-oauth-retry-transient-500.md  claude-skills-hooks.md  clerk-prod-key-csp.md  clerk-profilepill-test-isolation.md  clerk-signup-transfer.md  cli-one-shot-exit-hygiene.md  cli-probe-sessions.md  codex-context-window-400k.md  codex-max-output-tokens.md  collab-archive-lifecycle.md  collab-brief-summary.md  collab-context-brief.md  collab-dynamic-roles.md  collab-hang-spawn-leaks.md  (+234 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/crates/core/src/: lib.rs  requirements.rs
apps/desktop/src-tauri/src/: app_state.rs  boot.rs  commands.rs  lib.rs  main.rs  requirements.rs
apps/desktop/src-tauri/src/sidecar/: mock.rs
apps/desktop/src-tauri/tests/: integration.rs
crates/moxxy-channel/: Cargo.toml  README.md
crates/moxxy-channel/src/: bridge.rs  commands.rs  discord.rs  lib.rs  pairing.rs  telegram.rs  transport.rs  whatsapp.rs
crates/moxxy-core/: Cargo.toml  README.md
crates/moxxy-core/src/: agent_registry.rs  agent_store.rs  allowlist_store.rs  channel_store.rs  lib.rs  media.rs  settings.rs  stt.rs
crates/moxxy-core/src/agents/: hierarchy.rs  mod.rs
crates/moxxy-core/src/auth/: mod.rs  token.rs
crates/moxxy-core/src/events/: bus.rs  mod.rs  redaction.rs
crates/moxxy-core/src/heartbeat/: action.rs  file.rs  mod.rs  scheduler.rs
crates/moxxy-core/src/memory/: compactor.rs  embedding.rs  journal.rs  mod.rs
crates/moxxy-core/src/providers/: doc.rs  loader.rs  mod.rs  store.rs
crates/moxxy-core/src/security/: mod.rs  path_policy.rs
crates/moxxy-core/src/skills/: doc.rs  loader.rs  mod.rs
crates/moxxy-core/src/templates/: builtins.rs  doc.rs  loader.rs  mod.rs  store.rs
crates/moxxy-core/src/templates/builtins/: builder.md  designer.md  marketer.md
crates/moxxy-core/src/webhooks/: doc.rs  loader.rs  mod.rs  store.rs  template.rs
crates/moxxy-gateway/: Cargo.toml  README.md
crates/moxxy-gateway/src/: auth_extractor.rs  heartbeat_actions.rs  lib.rs  main.rs  rate_limit.rs  run_service.rs  state.rs  task_analyzer.rs
crates/moxxy-gateway/src/agent_kind/: ephemeral.rs  hive_worker.rs  mod.rs  standard.rs
crates/moxxy-gateway/src/routes/: agents.rs  audit.rs  auth.rs  channels.rs  events.rs  health.rs  heartbeats.rs  insights.rs  mcp.rs  memory.rs  mod.rs  providers.rs  settings.rs  skills.rs  templates.rs  vault.rs  webhooks.rs
crates/moxxy-gateway/tests/: e2e.rs  hive_e2e.rs
crates/moxxy-mcp/: Cargo.toml  README.md
crates/moxxy-mcp/src/: client.rs  error.rs  lib.rs  manager.rs  protocol.rs
crates/moxxy-mcp/src/transport/: mod.rs  sse.rs  stdio.rs  streamable_http.rs
crates/moxxy-plugin/: Cargo.toml  README.md
crates/moxxy-plugin/src/: error.rs  host.rs  lib.rs  manifest.rs  registry.rs  signature.rs  wasm_provider.rs
crates/moxxy-runtime/: Cargo.toml  README.md
crates/moxxy-runtime/sidecars/playwright/: README.md  package.json  sidecar.mjs
crates/moxxy-runtime/src/: anthropic_provider.rs  chromium.rs  claude_cli_provider.rs  context.rs  default_allowlists.json  default_allowlists.yaml  defaults.rs  echo_provider.rs  executor.rs  html_text.rs  lib.rs  openai_provider.rs  process.rs  provider.rs  provider_factory.rs  registry.rs  sandbox.rs  stt.rs  url_policy.rs
crates/moxxy-runtime/src/agent_kind/: core_primitives.rs  ephemeral.rs  hive_worker.rs  mod.rs  prompt.rs  registry.rs  standard.rs
crates/moxxy-runtime/src/browser/: bootstrap.rs  config.rs  manager.rs  mod.rs  protocol.rs  sidecar.rs
crates/moxxy-runtime/src/executor/: agent_listener.rs  hive_listener.rs  listener.rs  mod.rs  reflection.rs  run_executor.rs  stuck_detector.rs
crates/moxxy-runtime/src/primitives/: agent.rs  agent_self.rs  allowlist.rs  ask.rs  browse.rs  channel_notify.rs  config.rs  fs.rs  git.rs  heartbeat.rs  hive.rs  http.rs  mcp.rs  memory.rs  memory_ltm.rs  memory_stm.rs  mod.rs  notify.rs  reply.rs  session.rs  shell.rs  skill.rs  user_profile.rs  vault.rs  webhook.rs
crates/moxxy-runtime/src/primitives/browser/: core.rs  crawl.rs  interact.rs  mod.rs  session.rs
crates/moxxy-runtime/tests/: reflection_e2e.rs
crates/moxxy-storage/: Cargo.toml  README.md
crates/moxxy-storage/src/: fixtures.rs  lib.rs  rows.rs
crates/moxxy-storage/src/dao/: agent.rs  allowlist.rs  channel.rs  channel_binding.rs  channel_pairing.rs  conversation.rs  event_audit.rs  heartbeat.rs  media.rs  memory.rs  mod.rs  provider.rs  session_summary.rs  skill.rs  token.rs  vault_grant.rs  vault_ref.rs  webhook.rs  webhook_delivery.rs
crates/moxxy-types/: Cargo.toml  README.md
crates/moxxy-types/src/: agent_config.rs  agents.rs  auth.rs  channels.rs  errors.rs  events.rs  heartbeat.rs  lib.rs  mcp.rs  media.rs  memory.rs  providers.rs  run_starter.rs  skills.rs  templates.rs  vault.rs  webhooks.rs
crates/moxxy-vault/: Cargo.toml  README.md
crates/moxxy-vault/src/: backend.rs  lib.rs  policy.rs  service.rs
(+1418 files in other folders)
