[workspace]
members = ["."]
exclude = ["agent_runtime"]

[package]
name = "moxxy"
version = "0.10.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-openai = { version = "0.33.0", default-features = false, features = ["rustls"] }
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["ws", "macros"] }
console = "0.15"
crossterm = "0.29.0"
dirs = "6.0.0"
flate2 = "1.0.35"
tar = "0.4"
hex = "0.4"
hmac = "0.12"
global-hotkey = "0.5.0"
include_dir = "0.7.4"
inquire = "0.7"
libsqlite3-sys = { version = "0.36.0", features = ["bundled"] }
ratatui = "0.30.0"
quick-xml = "0.36.2"
regex = "1"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }
bytes = "1.5"
rusqlite = { version = "0.38.0", features = ["bundled"] }
semver = "1.0.27"
serenity = { version = "0.12.3", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9"
sha2 = "0.10"
sqlite-vec = "0.1"
teloxide = { version = "0.17.0", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7.18"
toml = "1.0.3"
tower-http = { version = "0.6.8", features = ["cors"] }
urlencoding = "2.1.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
rand = "0.8"
uuid = { version = "1.13", features = ["v4", "fast-rng"] }
mime_guess = "2.0.5"
wasmtime = "41"
wasmtime-wasi = "41"
open = "5.3.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
