[workspace]
resolver = "2"
members = [
    "crates/moxxy-types",
    "crates/moxxy-test-utils",
    "crates/moxxy-storage",
    "crates/moxxy-core",
    "crates/moxxy-vault",
    "crates/moxxy-gateway",
    "crates/moxxy-runtime",
    "crates/moxxy-channel",
    "crates/moxxy-plugin",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Errors
thiserror = "2"

# Crypto
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
ed25519-dalek = "2"
hex = "0.4"
aes-gcm = "0.10"
base64 = "0.22"

# Time/IDs
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v7", "serde"] }
cron = "0.15"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Web
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"

# Async traits
async-trait = "0.1"

# Vault
keyring = "3"

# HTTP types
http = "1"

# WASI
wasmtime = "29"
wasmtime-wasi = "29"
wat = "1"

# Test
tempfile = "3"
proptest = "1"
tower = { version = "0.5", features = ["util"] }
