[package]
name = "moxxy-channel"
version = "0.1.0"
edition.workspace = true

[dependencies]
moxxy-types = { path = "../moxxy-types" }
moxxy-storage = { path = "../moxxy-storage" }
moxxy-vault = { path = "../moxxy-vault" }
moxxy-core = { path = "../moxxy-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
moxxy-test-utils = { path = "../moxxy-test-utils" }
rusqlite = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
