[package]
name = "moxxy-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
moxxy-types = { path = "../moxxy-types" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
cron = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
