[package]
name = "moxxy-gateway"
version = "0.1.0"
edition.workspace = true

[dependencies]
moxxy-types = { path = "../moxxy-types" }
moxxy-storage = { path = "../moxxy-storage" }
moxxy-core = { path = "../moxxy-core" }
moxxy-vault = { path = "../moxxy-vault" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
