[package]
name = "moxxy-gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "moxxy-gateway"
path = "src/main.rs"

[dependencies]
tracing-subscriber = { workspace = true }
moxxy-types = { path = "../moxxy-types" }
moxxy-storage = { path = "../moxxy-storage" }
moxxy-core = { path = "../moxxy-core" }
moxxy-runtime = { path = "../moxxy-runtime" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http = { workspace = true }
moxxy-test-utils = { path = "../moxxy-test-utils" }
