[package]
name = "moxxy-gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "moxxy-gateway"
path = "src/main.rs"

[dependencies]
tracing-subscriber = { workspace = true }
moxxy-types = { path = "../moxxy-types" }
moxxy-storage = { path = "../moxxy-storage" }
moxxy-core = { path = "../moxxy-core" }
moxxy-runtime = { path = "../moxxy-runtime" }
moxxy-channel = { path = "../moxxy-channel" }
moxxy-vault = { path = "../moxxy-vault" }
async-trait = "0.1"
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
thiserror = { workspace = true }
cron = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
tower_governor = "0.8"
governor = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tower = { workspace = true }
http = { workspace = true }
moxxy-test-utils = { path = "../moxxy-test-utils" }
futures-util = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
