[package]
name = "moxxy-mcp"
version = "0.1.0"
edition.workspace = true

[dependencies]
moxxy-types = { path = "../moxxy-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
reqwest-eventsource = "0.6"
futures-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
