[package]
name = "moxxy-runtime"
version = "0.1.0"
edition.workspace = true

[dependencies]
moxxy-types = { path = "../moxxy-types" }
moxxy-core = { path = "../moxxy-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tempfile = { workspace = true }
