[package]
name = "moxxy-runtime"
version = "0.1.0"
edition.workspace = true

[dependencies]
moxxy-types = { path = "../moxxy-types" }
moxxy-core = { path = "../moxxy-core" }
moxxy-storage = { path = "../moxxy-storage" }
moxxy-vault = { path = "../moxxy-vault" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
scraper = "0.22"

[dev-dependencies]
tempfile = { workspace = true }
moxxy-test-utils = { path = "../moxxy-test-utils" }
rusqlite = { workspace = true }
regex = "1"
