[package]
name = "moxxy-storage"
version = "0.1.0"
edition.workspace = true

[dependencies]
moxxy-types = { path = "../moxxy-types" }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
moxxy-test-utils = { path = "../moxxy-test-utils" }
rand = { workspace = true }
