[package]
name = "moxxy-vault"
version = "0.1.0"
edition.workspace = true

[dependencies]
moxxy-types = { path = "../moxxy-types" }
moxxy-storage = { path = "../moxxy-storage" }
rusqlite = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
moxxy-test-utils = { path = "../moxxy-test-utils" }
